* README: Modified install procedure. * setup.py: Set correct installation path for data files. * ar.py: Corrected bug in treating object files with odd length. * error.py: Using sys.exit() instead of exit(). * linker.py: Implemented rellocation for CALL instruction. For the * others, giving information about the opcode of the non implemented instruction.

--- a/README
+++ b/README
@@ -16,11 +16,9 @@ picc is a linker for PIC microcontrollers' code objects in the COFF format.
 
 # Building and Installing picc
 
-To build and install picc, follow the well-known sequence of commands:
+To install picc, just execute the command:
 
-    ./configure
-    make
-    sudo make install
+    python setup.py install
 
 # Usage
 
